# Goalbar

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/browser-scripts/: feed-observation.js  inbox-scan.js  prepare-reply.js  selection-capture.js  semantic-observation.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_core.sql  0002_growth_memory.sql  0003_content.sql  0004_platforms.sql  0005_relationships_jobs.sql  0006_browser_history.sql  0007_agent_research.sql  0008_browser_use_trace.sql  0009_controlled_growth_loop.sql  0010_email_notifications.sql  0011_founder_starting_context.sql  0012_browser_inbox.sql  0013_saved_browser_replies.sql  0014_browser_inbox_full_scan.sql  0015_browser_inbox_profiles.sql
src-tauri/permissions/autogenerated/: accept_icp_hypothesis.toml  accept_learning.toml  activate_browser_tab.toml  approve_growth_action.toml  approve_reply.toml  approve_variant.toml  backup_local_database.toml  begin_platform_oauth.toml  browser_go_back.toml  browser_go_forward.toml  cancel_browser_collection.toml  check_keyring.toml  choose_history_archive.toml  clear_browser_data.toml  close_browser_tab.toml  close_terminal_session.toml  commit_browser_capture.toml  (+57 more)
src-tauri/src/: app_state.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  updates.rs  validation.rs
src-tauri/tests/: agent_contract.rs  browser_inbox_scan_progress.rs  browser_policy_contract.rs  history_import_contract.rs  migrations.rs  platform_contract.rs  updater_contract.rs
(+199 files in other folders)
